Improved header spacing between VoterGuide and VoterGuideCreator modes. Fixed bug with candidate page not loading.

--- a/src/sass/components/_navigator.scss
+++ b/src/sass/components/_navigator.scss
@@ -8,6 +8,7 @@ $header-height: 54px;
 $headroom-wrapper-webapp-ballot: 48px;
 $headroom-wrapper-webapp-default: 54px;
 $headroom-wrapper-webapp-voter-guide: 56px;
+$headroom-wrapper-webapp-voter-guide-creator: 105px;
 $headroom-wrapper-webapp-office: 102px;
 $headroom-webapp: 104px;
 $header-height-cordova-ballot-ios: -1vh;
@@ -128,6 +129,9 @@ $container-margin: -15px;
   }
   &__voter-guide {
     margin-top: $headroom-wrapper-webapp-voter-guide;
+  }
+  &__voter-guide-creator {
+    margin-top: $headroom-wrapper-webapp-voter-guide-creator;
   }
   &__cordova-ios {
     margin-top: $header-height-cordova-ballot-ios;
